# rsgx-fs-playground

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  Cargo.toml  build.rs
app/src/: main.rs
cmake/: sgx.cmake
enclave/: CMakeLists.txt  Cargo.toml  enclave.config.xml  enclave.edl
enclave/src/: lib.rs
